[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/core/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/worlds/procedural_world/procedural_world.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/esc_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI/start_game_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/settings_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/UI/title_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/core/UI.gd" type="Script" id=8]

[node name="Game" type="Node"]
pause_mode = 1
script = ExtResource( 1 )
start_level_scn = ExtResource( 3 )
player_scn = ExtResource( 2 )

[node name="World" type="Spatial" parent="."]

[node name="UI" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="MainMenu" parent="UI" instance=ExtResource( 7 )]
pause_mode = 2
visible = false

[node name="StartGameMenu" parent="UI" instance=ExtResource( 5 )]
pause_mode = 2
visible = false

[node name="PauseMenu" type="Node" parent="UI"]
pause_mode = 2

[node name="EscMenu" parent="UI/PauseMenu" instance=ExtResource( 4 )]

[node name="SettingsMenu" parent="UI/PauseMenu" instance=ExtResource( 6 )]

[node name="HUD" type="Node" parent="UI"]
pause_mode = 1

[node name="InGame" type="Node" parent="UI"]

[connection signal="about_to_show" from="UI/PauseMenu/EscMenu" to="UI" method="_on_EscMenu_about_to_show"]
[connection signal="popup_hide" from="UI/PauseMenu/EscMenu" to="UI" method="_on_EscMenu_popup_hide"]
[connection signal="about_to_show" from="UI/PauseMenu/SettingsMenu" to="UI" method="_on_SettingsMenu_about_to_show"]
[connection signal="popup_hide" from="UI/PauseMenu/SettingsMenu" to="UI" method="_on_SettingsMenu_popup_hide"]
